crates/toml_edit/tests/fixtures/invalid/empty-implicit-table.stderr
TOML parse error at line 1, column 9
  |
1 | [naughty..naughty]
  |         ^
Invalid table header
Expected `.`, `]`
